# rspack

./: Cargo.toml  tsconfig.base.json
.github/workflows/: ci.yml
crates/node_binding/: binding.d.ts
crates/node_binding/src/: lib.rs  panic.rs
crates/node_binding/src/plugins/: mod.rs
crates/rspack/tests/: fixtures.rs
crates/rspack_binding_options/src/options/: raw_optimization.rs
crates/rspack_binding_values/src/: compilation.rs
crates/rspack_core/: Cargo.toml
crates/rspack_core/src/: exports_info.rs  lib.rs  module.rs  normal_module_factory.rs
crates/rspack_core/src/build_chunk_graph/: code_splitter.rs
crates/rspack_core/src/buildtime_execution/: plugin.rs
crates/rspack_core/src/chunk_graph/: chunk_graph_module.rs
crates/rspack_core/src/compiler/: compilation.rs  queue.rs
crates/rspack_core/src/dependency/: dependency_type.rs  mod.rs  runtime_template.rs
crates/rspack_core/src/options/: output.rs
crates/rspack_database/src/: database.rs  ukey.rs
crates/rspack_error/src/: lib.rs
crates/rspack_napi_shared/: Cargo.toml
crates/rspack_napi_shared/src/: lib.rs  utils.rs
crates/rspack_napi_shared/src/js_values/: chunk.rs  compilation.rs  mod.rs
crates/rspack_plugin_javascript/: Cargo.toml
crates/rspack_plugin_runtime/: Cargo.toml
crates/rspack_plugin_runtime/src/: runtime_plugin.rs
crates/rspack_plugin_split_chunks_new/: Cargo.toml
crates/rspack_testing/src/: test_config.rs
crates/rspack_util/: Cargo.toml
examples/simple/: fib.js  index.js  my-loader.js  rspack.config.js  shared.js
webpack-test/: ConfigTestCases.template.js
(+21 files in other folders)
