[package]
edition    = "2021"
license    = "MIT"
name       = "rspack_napi_shared"
repository = "https://github.com/web-infra-dev/rspack"
version    = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap               = { workspace = true }
futures               = { workspace = true }
napi                  = { workspace = true, features = ["async", "tokio_rt", "serde-json", "napi4", "anyhow"] }
napi-derive           = { workspace = true }
napi-sys              = { workspace = true }
rspack_binding_macros = { path = "../rspack_binding_macros" }
rspack_core           = { path = "../rspack_core" }
rspack_error          = { path = "../rspack_error" }
rspack_identifier     = { path = "../rspack_identifier" }
rspack_regex          = { path = "../rspack_regex" }
rustc-hash            = { workspace = true }
tokio                 = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "test-util", "parking_lot"] }
